fixed text align for tab labels in settingsview

--- a/css/SettingsView.styl
+++ b/css/SettingsView.styl
@@ -249,13 +249,13 @@
 #setViewRoot .navtext
     font-size 100%
     display block
-    margin-left 6.95%
-    margin-top 0.372%
+    margin-left 7.25%
+    padding-top 2.625%
 
 #setViewRoot .navsubtext
     font-size 70%
     display block
-    margin-left 6.95%
+    margin-left 7.25%
     margin-top 0.372%
 
 #setViewRoot #setViewMiddleBarContainer
